# helix

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
agent/: go.mod
agent/cmd/command-agent/: main.go
agent/internal/config/: config.go
agent/internal/enroll/: enroll.go
agent/internal/transport/: connect.go
agent/internal/version/: version.go
agent/packaging/: install.sh
agent/packaging/systemd/: linux-command-agent.service
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase_1_auth.py  0002_phase_2_nodes.py
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/api/: agents.py  auth.py  health.py  me.py  nodes.py
backend/app/models/: __init__.py  audit.py  enrollment.py  node.py  session.py  user.py
backend/app/schemas/: auth.py  node.py  user.py
backend/app/security/: csrf.py  rbac.py  session.py  tokens.py
backend/app/services/: agent_session_service.py  audit_service.py  auth_service.py  node_service.py  seed_service.py
docs/: handoff.md
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/app/: auth-provider.tsx  globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: dashboard-shell.tsx  page.tsx
frontend/app/dashboard/approvals/: page.tsx
frontend/app/dashboard/audit/: page.tsx
frontend/app/dashboard/jobs/: page.tsx
frontend/app/dashboard/nodes/: nodes-client.tsx  page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts
