[project]
name = "linux-command-center-backend"
version = "0.1.0"
description = "FastAPI backend for Linux Command Center"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
